# api/src/routes.js
@@ -1,7 +1,8 @@
 const express = require('express');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
-const{getListUsers,getUserById,createUser,updatePlayer,removeUser} = require('./controller/user.controller');
+const {getListUsers,getUserById,createUser,updatePlayer,removeUser} = require('./controller/user.controller');
+const {login} = require('./controller/security.controller');
 
 const router = express.Router();
 router.use(express.json());
@@ -18,6 +19,12 @@ router.get('/users/:uid',getUserById);
 router.post('/users',createUser);
 router.put('/users/:uid',updatePlayer);
 router.delete('/users/:uid',removeUser);
+
+/**
+ * API Auth
+ */
+router.post('/login',login);
+
 
 module.exports = router;
 
